--- a/portfolio.html
+++ b/portfolio.html
@@ -198,11 +198,36 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link">
                 <div class="skills-list__thumb">
-                  <img
-                    src="./images/img1-portfolio.jpg"
-                    alt="Фото ноутбука с нашими технокряками"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-1.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-1.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-1.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-1.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-1.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-1.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-1.jpg"
+                      alt="Фото ноутбука с нашими технокряками"
+                    />
+                  </picture>
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -220,11 +245,37 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img
-                    src="./images/img2-portfolio.jpg"
-                    alt="Баскетбольная команда New Orlean против Golden Star"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-2.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-2.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-2.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-2.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-2.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-2.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-2.jpg"
+                      alt="Баскетбольная команда New Orlean против Golden Star"
+                    />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -242,11 +293,37 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img
-                    src="./images/img3-portfolio.jpg"
-                    alt="Логотип ресторана Seafood"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-3.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-3.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-3.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-3.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-3.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-3.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-3.jpg"
+                      alt="Логотип ресторана Seafood"
+                    />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -264,7 +341,37 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img src="./images/img4-portfolio.jpg" alt="Наушники" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-4.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-4.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-4.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-4.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-4.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-4.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-4.jpg"
+                      alt="Наушники"
+                    />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -282,7 +389,37 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img src="./images/img5-portfolio.jpg" alt="Небольшые коробки" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-5.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-5.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-5.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-5.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-5.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-5.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-5.jpg"
+                      alt="Небольшые коробки"
+                    />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -300,7 +437,37 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img src="./images/img6-portfolio.jpg" alt="Imac с картинкой" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-6.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-6.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-6.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-6.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-6.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-6.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-6.jpg"
+                      alt="Imac с картинкой"
+                    />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -318,7 +485,34 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img src="./images/img7-portfolio.jpg" alt="Книга" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-7.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-7.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-7.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-7.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-7.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-7.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img src="./images/portfolio/portfolio-mob/portfolio-mob@1-7.jpg" alt="Книга" />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -336,7 +530,34 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img src="./images/img8-portfolio.jpg" alt="Лейбл" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-8.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-8.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-8.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-8.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-8.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-8.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img src="./images/portfolio/portfolio-mob/portfolio-mob@1-8.jpg" alt="Лейбл" />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
@@ -354,11 +575,37 @@
             <li class="skills-list__item item">
               <a href="" class="skills-list__link link"
                 ><div class="skills-list__thumb">
-                  <img
-                    src="./images/img9-portfolio.jpg"
-                    alt="Человек печатает на macbook"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-desk/portfolio-desk@1-9.jpg 370w,
+                        ./images/portfolio/portfolio-desk/portfolio-desk@2-9.jpg 740w
+                      "
+                      media="(min-width: 1200px)"
+                      sizes="370px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-tab/portfolio-tab@1-9.jpg 354w,
+                        ./images/portfolio/portfolio-tab/portfolio-tab@2-9.jpg 708w
+                      "
+                      media="(min-width: 768px)"
+                      sizes="354px"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/portfolio-mob/portfolio-mob@1-9.jpg 450w,
+                        ./images/portfolio/portfolio-mob/portfolio-mob@2-9.jpg 900w
+                      "
+                      media="(min-width: 480px)"
+                      sizes="450px"
+                    />
+                    <img
+                      src="./images/portfolio/portfolio-mob/portfolio-mob@1-9.jpg"
+                      alt="Человек печатает на macbook"
+                    />
+                  </picture>
+
                   <p class="skills-list__hover-text text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
